--- a/src/server/resources/css/style.css
+++ b/src/server/resources/css/style.css
@@ -108,8 +108,8 @@ body {
 }
 
 .carousel-main-img {
-    width: 100%;
-    height: 100%;
+    width: 50vw;
+    height: 100vh;
 }
 
 #lobby-players {
