--- a/src/server/views/lobby.ejs
+++ b/src/server/views/lobby.ejs
@@ -3,277 +3,284 @@
 <head>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <meta charset="UTF-8">
-    <title>Z3D</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href='' rel='stylesheet' type='text/css'>
+    <title>Z3D - Game Lobby</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
 
 <style>
-    @font-face {
-        font-family: z3d;
-        src: url("/fonts/HelpMe.ttf");
-    }
-
     body {
-        background: #333;
-        color: #ccc;
+        max-width: 100vw;
+        max-height: 100vh;
+
+        background: #333333;
+    }
+    .carousel-img {
+        width: 500px;
+        aspect-ratio: 16/9;
+        margin: auto;
+    }
+    .carousel-main-img {
+        width: 500px;
     }
 
-    #landing-page {
-        width: 100vw;
-        height: 100vh;
+    .btn {
+        background: #880000;
+        color: white;
+        padding: 20px;
+        border-radius: 5px;
     }
 
-    .column {
-        flex-direction: column;
+    .isReady {
+        background: #C20707;
     }
-    .d-flex {
-        display: flex;
-    }
-    .lp-zombie-hand {
-        position: absolute;
-        bottom: 0;
-        height: 100%;
-        width: 40%;
-        z-index: -1;
-    }
-    #lp-title {
+    .isReadyCheckmark:before {
+        content: 'READY';
         position: relative;
-        top: 320px;
-
-        color: #7C0404;
-        text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
-        font-size:256px;
-        font-family: z3d!important;
-
+        right: 0;
     }
 </style>
 
-<div id="landing-page" class="container-fluid d-flex">
-    <div class="col py-5 d-flex flex-column justify-content-between align-items-stretch">
+<h1>LOBBY</h1>
 
+<div id="lobby" class="fluid-container">
 
-        <div class="row">
+    <div class="row d-flex">
 
-            <% if(user.isAdmin) { %>
+        <div id="lobby-left" class="col">
 
-                <div class="col">
-                    <h2>Admin routes</h2>
-                    <a href="/admin/maps">Admin Maps</a>
+            <div class="row">
+                <div id="lobby-room-name-div" class="row">
+                    <h2 id="lobby-room-name" class="red"><%= game.name %></h2>
+                </div>
+                <div id="lobby-room-id-div" class="row">
+                    <h3 id="lobby-room-id" class="dark-red"><%= game._id %></h3>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div id="lobby-form" class="container">
+                    <div class="col">
+
+                        <form>
+                            <!-- map slider -->
+                            <div id="lobby-map-carousel" class="carousel slide">
+                                <div class="carousel-inner">
+
+                                    <%if (maps.length > 0) {
+                                            for (const map of maps) {
+                                    if (map.playable) {%>
+                                        <div class="carousel-item <%= 'active' %>" data-map-name="<%= map.name %>" data-map-id="<%= map.id %>">
+                                            <img src="<%= assetsPath %>/img/map-preview/<%= map.preview %>" class="d-block carousel-img" alt="...">
+                                        </div>
+                                    <% }
+                                    }
+                                    } else { %>
+                                        <p>No map found</p>
+                                    <%}%>
+
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#lobby-map-carousel" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#lobby-map-carousel" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+
+                            <!-- modifier -->
+
+                        </form>
+                    </div>
                 </div>
 
-            <% } %>
+                <div class="row">
+                    <div class="d-flex justify-content-around mb-5">
 
+                        <a id="lobby-btn-leave" href="/game/lobby/leave/<%= game._id %>" class="btn btn-red">Leave</a>
+                        <button id="lobby-btn-ready" type="submit" class="btn btn-red">Ready</button>
 
-            <div class="col">
-
-                <div class="input-group mb-3">
-                    <button class="btn btn-danger" type="button" id="set-gamename-button">Set username</button>
-                    <input type="text" class="form-control" id="set-gamename" value="<%= user.gamename %>" aria-describedby="button-addon1">
+                    </div>
                 </div>
+
 
             </div>
         </div>
 
-        <div>
+        <div id="lobby-right" class="col">
+            
+            <div id="lobby-right-header-parent">
+                <h1 id="lobby-z3d" class="red">Z3D</h1>
+                <div id="lobby-map-name" class="dark-red">Flora Square</div>
+            </div>
+            
+            <div id="lobby-players">
+                <ul id="lobby-players-list">
+                    <li class="color-white">Esteban</li>
+                    <li class="color-blue">OIM</li>
+                    <li class="color-red">Swag</li>
+                    <li class="color-green">Oui</li>
+                </ul>
+            </div>
+            
+            <div id="lobby-main-map-img-div">
 
-            <div class="row">
-                <div class="col">
-                    <div class="input-group mb-3">
-                        <button class="btn btn-danger" type="button" id="create-game-button">Create room</button>
-                        <input id="create-game-title" type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                        <span class="input-group-text text-danger">Private?</span>
 
-                        <div class="input-group-text">
-                            <input id="create-game-private" class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
-                        </div>
+                <!-- map slider -->
+                <div id="lobby-main-map-carousel" class="carousel slide">
+                    <div class="carousel-inner">
+
+                        <%
+                        if (maps.length > 0) {
+                                for (const map of maps) {
+                                    if (map.playable) {
+                        %>
+
+                            <div class="carousel-item active">
+                                <img src="<%= assetsPath %>/img/map-preview/<%= map.preview %>" class="d-block carousel-main-img" alt="...">
+                            </div>
+
+                        <% }}} %>
+
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-
-                <div class="d-flex justify-content-between">
-                    <h2>Public games</h2>
-                    <button class="btn btn-secondary m-1" id="refresh-btn">Refresh</button>
-                </div>
-
-
-                <div class="container">
-                    <table id="games-table" class="">
-                        <thead>
-                            <tr class="">
-                                <th scope="col">Name</th>
-                                <th scope="col">Map</th>
-                                <th scope="col">Status</th>
-                                <th scope="col">Players</th>
-                                <th scope="col">Ping</th>
-                            </tr>
-                        </thead>
-                        <tbody id="public-games-tbody">
-                        </tbody>
-                    </table>
-                </div>
-
-            </div>
-
+            
         </div>
-
-
+        
     </div>
-
-    <div class="col">
-        <div class="row justify-content-center">
-            <h1 id="lp-title" class="red text-center">Z3D</h1>
-        </div>
-        <div class="row lp-zombie-hand-div justify-content-center">
-            <img class="lp-zombie-hand img-fluid" src="img/zombie-hand.png">
-        </div>
-    </div>
-
+    
 </div>
 
-<script>
-    const refreshBtn = document.getElementById('refresh-btn')
-    const gamesTable = document.getElementById('games-table')
-    const gamesTableBody = document.getElementById('public-games-tbody')
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-    const createGameButton = document.getElementById('create-game-button')
-    const createGameTitle = document.getElementById('create-game-title')
-    const createGamePrivate = document.getElementById('create-game-private')
+<script defer="defer">
 
-    const httpHeadersOption = {
-        method: 'GET',
-        headers: {}
+    socket = io({
+        query: {
+            gameId: '<%= game._id %>',
+            userId: '<%= user._id %>',
+        },
+    });
+
+    const playerUl = document.getElementById('lobby-players-list')
+    playerUl.innerHTML = ''
+
+    function createPlayerLi(player, playerUl) {
+        const li = document.createElement('li')
+        li.innerText = player.gamename ?? player.username
+        li.id = 'lobby-player-' + player._id
+        li.classList.add('lobby-player')
+
+        console.log(player.color)
+
+        let hexa = player.color;
+        li.style.color = '#' + hexa
+
+        playerUl.append(li)
     }
 
-    let lastRefresh = Date.now()
-    const resfreshRate = 1000
 
-    refreshBtn.addEventListener('click', () => {
-        if (lastRefresh + resfreshRate < Date.now()) {
-            refresh();
-            lastRefresh = Date.now()
+
+    socket.on('connect', () => {
+        console.log('connected')
+    })
+
+    const $carousel = $('#lobby-map-carousel')
+    $carousel.on('slide.bs.carousel', (e) => {
+        let active
+
+        console.log(e)
+
+        if (e.direction === 'left') {
+            $('#lobby-main-map-carousel').carousel('next')
+            if ($('#lobby-map-carousel .active').next().length === 0) {
+                active = $('#lobby-map-carousel .active').parent().children().first()
+            } else {
+                active = $('#lobby-map-carousel .active').next()
+            }
+        } else {
+            $('#lobby-main-map-carousel').carousel('prev')
+            if ($('#lobby-map-carousel .active').prev().length === 0) {
+                active = $('#lobby-map-carousel .active').parent().children().last()
+            } else {
+                active = $('#lobby-map-carousel .active').prev()
+            }
+        }
+
+        console.log(active.data('mapName'))
+        $('#lobby-map-name').text(active.data('mapName'))
+
+        socket.emit('lobby-map-change', {
+            direction: e.direction,
+            mapName: active.data('mapName')
+        })
+    })
+
+    socket.on('lobby-map-change', (e) => {
+        $('#lobby-map-name').text(e.mapName)
+        if (e.direction === 'left') {
+            $('#lobby-main-map-carousel').carousel('next')
+        } else {
+            $('#lobby-main-map-carousel').carousel('prev')
         }
     })
 
-    /**
-     * Start game request
-     */
-    createGameButton.addEventListener('click', async (e) => {
+    socket.on('get_players', (players) => {
+        console.log('received players : ', players)
+        playerUl.innerHTML = ''
+        for (const playersKey in players) {
+            createPlayerLi(players[playersKey], playerUl)
+        }
+        // for (const [playerId, player] of players.entries()) {
+        //     createPlayerLi(player, playerUl)
+        // }
+    })
+
+    socket.on('player_connect', (player) => {
+        console.log('[LOBBY] player connected : ' + player.socketId)
+        createPlayerLi(player, playerUl)
+    })
+
+    socket.on('player_disconnect', (socketId) => {
+        console.log('player disconnected')
+        const li = document.getElementById('lobby-player-' + socketId)
+        if (li !== null) {
+            li.remove()
+        }
+    })
+
+    socket.on('player-ready', (playerReady) => {
+        const el = document.getElementById('lobby-player-' + playerReady.userId)
+
+        if (playerReady.isReady) {
+            el.classList.add('isReadyCheckmark')
+        } else {
+            el.classList.remove('isReadyCheckmark')
+        }
+
+    })
+
+    const btnReady = document.getElementById('lobby-btn-ready')
+    btnReady.addEventListener('click', e => {
         e.preventDefault()
 
-        if (createGameTitle.value === '')
-            return;
+        let isReady = btnReady.classList.contains('isReady')
 
-        const res = await fetch('/game/create', {
-            method: 'POST',
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                name: createGameTitle.value,
-                private: createGamePrivate.checked
-            })
-        })
-        const data = await res.json()
+        btnReady.classList.toggle('isReady')
 
-        if (data.gameId === undefined) {
-            // TODO flashMessage
-            return
-        }
-
-        window.location.assign('/game/' + data.gameId)
+        socket.emit('ready', !isReady)
     })
 
-    function refresh() {
-        fetch('/lp/refresh', httpHeadersOption)
-            .then(response => response.json())
-            .then(body => {
-                createTable(body)
-            });
-    }
 
-    function createTable(body) {
-        gamesTableBody.replaceChildren();
 
-        for (let i = 0; i < body.length; i++) {
-            gamesTableBody.appendChild(createRow(body[i]))
-        }
-
-    }
-
-    function createRow(gameConf) {
-        const row = document.createElement('tr')
-
-        row.appendChild(createTd(gameConf.name))
-        row.appendChild(createTd(gameConf.map))
-        row.appendChild(createTd(gameConf.status))
-        row.appendChild(createTd(gameConf.players))
-        row.appendChild(createTd(gameConf.ping))
-
-        const td = createTd()
-        td.appendChild(createLink('Join', '/game/'+gameConf.id))
-        row.appendChild(td)
-
-        return row
-    }
-
-    function createTd(innerText = '') {
-        const td = document.createElement('td')
-        td.innerText = innerText
-        return td
-    }
-
-    function createLink(innerText, link) {
-        const a = document.createElement('a')
-        a.innerText = innerText
-        a.href = link
-        a.classList.add('btn', 'btn-success')
-        return a
-    }
-
-    refresh()
-
-    function setUsername() {
-        const usernameButton = document.getElementById('set-gamename-button')
-        const gamename = document.getElementById('set-gamename')
-
-        usernameButton.addEventListener('click', async () => {
-            if (gamename.value.length > 0) {
-                const res = await fetch('/player/username/set', {
-                    method: 'POST',
-                    body: JSON.stringify({gamename: gamename.value}),
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                })
-                const ress = await res.json()
-                console.log(ress)
-
-            }
-        })
-    }
-    setUsername()
-
-    // const mapSelect = document.getElementById('create-game-map')
-    // function getMaps() {
-    //     fetch('/lp/maps', httpHeadersOption)
-    //         .then(response => response.json())
-    //         .then(body => {
-    //             for (const mapFile of body) {
-    //                 const option = document.createElement('option')
-    //                 option.innerText = mapFile
-    //                 option.value = mapFile
-    //                 mapSelect.append(option)
-    //             }
-    //         });
-    // }
-    // getMaps()
 </script>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
