{WIP] starting merging client game with react

--- a/client/src/components/game/lobby/lobby.css
+++ b/client/src/components/game/lobby/lobby.css
@@ -54,7 +54,7 @@ ul li {
 
     transition: .2s;
 }
-.map-item:hover, .active  {
+.map-item:hover, .maps-container .active  {
     background: #880000;
 }
 
