WIP - player position to clients

--- a/server/views/admin/maps.ejs
+++ b/server/views/admin/maps.ejs
@@ -82,12 +82,12 @@
                 </div>
                 <div class="mb-3">
 
-                    <label for="map-file" class="form-label">Map file (gltf/glb)</label>
+                    <label for="map-file" class="form-label">Map file (model/glb)</label>
                     <input id="map-file"
                            name="map-file"
                            class="form-control"
                            type="file"
-                           accept=".glb,.gltf,model/gltf+json,model/gltf-binary"
+                           accept=".glb,.gltf,gltf/model+json,gltf/model-binary"
                     >
 
                 </div>
